crates/lang/macro/tests/ui/contract/fail/storage-unknown-marker.stderr
error: unknown ink! attribute (path)
 --> $DIR/storage-unknown-marker.rs:6:11
  |
6 |     #[ink(unknown_or_unsupported)]
  |           ^^^^^^^^^^^^^^^^^^^^^^
